--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buttonwizard",
+  "name": "@eli/buttonwizard",
   "version": "1.0.0",
   "description": "Demo for button",
   "main": "index.js",
